setup server, linter, test, swagger generator, gracefull shutdown
Took 3 hours 19 minutes
